--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <main>
       <div class="container">
           <div class="imagem">
-            <img id="foto" class="img-nasa" src="" alt="">
+            <img id="foto" class="img-nasa" src="" alt="foto">
+          </div>
+          <div class='imagem video'>
+            <iframe id='video' class='img-nasa'src="" frameborder="0"></iframe>
           </div>
         <div class='form-info'>
           <form class="formulario" action="">
@@ -44,7 +47,13 @@
               <p class="descricao" id=descricao></p>
             </div>
         </div>
-    </main>
+      </div>
+        <div class="descricao erro oculto">
+          <h1 class="erro">ERROR 404</h1>
+          <p>Página não encontrada.</p>
+          <button class='botao-erro'>Clique aqui para recarregar a página</button>
+        </div>
+      </main>
     <footer class="footer">
       <p>Made by Francisco Igor</p></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
